--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,11 +1,11 @@
 [tool.poetry]
 name = "wwl_grakel"
 version = "0.1.0"
-description = ""
+description = "Grakel version of Wasserstein Weisfeiler Lehman Graph kernel"
 authors = ["Masatsugar"]
 
 [tool.poetry.dependencies]
-python = ">=3.8, 3.10<"
+python = ">=3.7, 3.10<"
 grakel = "^0.1.8"
 POT = "^0.8.1"
 pandas = "^1.4.2"
@@ -30,7 +30,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.black]
 line-length = 88
-target-version = ['py38', 'py39']
+target-version = ['py37', 'py38', 'py39']
 include = '\.pyi?$'
 extend-exclude = '''
 /(
