--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = "Grakel version of Wasserstein Weisfeiler Lehman Graph kernel"
 authors = ["Masatsugar"]
 
 [tool.poetry.dependencies]
-python = ">=3.7, 3.10<"
+python = ">=3.7, <3.10"
 grakel = "^0.1.8"
 POT = "^0.8.1"
 pandas = "^1.4.2"
